--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,146 +7,160 @@
     <title>Home - Game Mania</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" </head> <body>
+    <link rel="stylesheet" href="css/style.css">
+</head> 
+
+<body onload="mostrarPopup()">
     <header>
         <div class="container-grid">
-            <div class="brand">
+            <div class="container logo">
                 <a href=""><img src="Img/Logo.png" alt="Logo do site"></a>
             </div>
-            <div class="search">
+            <div class="container busca">
                 <a href=""><img src="Img/Pesquisa.png" alt="Pesquisa"></a>
             </div>
-            <div class="my-count">
+            <div class="container conta">
                 <a href=""><img src="Img/Minha Conta.png" alt="Minha Conta"></a>
             </div>
-            <div class="heart">
-                <a href=""><img src="Img/favorite-ge3b89e50b_1280 1.png"></a>
+            <div class="container favorito">
+                <a href=""><img src="Img/favorito.png"></a>
             </div>
-            <div class="bag">
+            <div class="container sacola"> 
                 <a href=""><img src="Img/Sacolinha.png" alt="Sacolinha"></a>
             </div>
         </div>
-    </header>
+    
     <div>
         <nav class="menu">
             <a href="">Acessórios</a>
             <a href="">Star Wars</a>
             <a href="">Playstation</a>
-            <a href="">Xbox</a>
+            <a href="">XBox</a>
         </nav>
     </div>
-    <div class="bannerfull">
+</header>
+    <div class="bannerfull ">
     </div>
-    <div class="bannertarja">
-    </div>
+    <section class="banners-tarja container">
+        <div class="banners-tarja">
+            <img src="Img/Banner-TarjaParcelamento.png"></a>
+            <img src="Img/Banner-TarjaEntregas.png"></a>
+            <img src="Img/Banner-Tarja-Desconto.png"></a>
+            <img src="Img/Banner-Tarjasegura.png"></a>
+        </div>
+    </section>
     <section class="mini-banner">
         <div class="minibanner container">
-            <img src="Img/Mini banner 1.png"></a>
-            <img src="Img/Mini banner 2.png"></a>
-            <img src="Img/Mini banner 3.png"></a>
+            <img src="Img/mini-banner1.png"></a>
+            <img src="Img/mini-banner2.png"></a>
+            <img src="Img/mini-banner3.png"></a>
         </div>
     </section>
     <section class="secao-destaque ">
-        <div class="destaques container">
-            <div class="bloco-destaques">
-                <h2> Destaques</h2>
-                <div class="content-news">
-                    <img src="Img/Produto 1.png">
-                </div>
-                <div class="content-news">
-                    <img src="Img/Produto 2.png">
-                </div>
-                <div class="content-news">
-                    <img src="Img/Produto 3.png">
-                </div>
-                 <div class="content-news">
-                    <img src="Img/Produto 4.png">
-                </div>
-                                <div class="contant-news">
-                                    <div class="cadrnews">
-                                        <img src="Img/Produto 5.png">
-                                    </div>
-                                    <div class="contant-news">
-                                        <div class="cadrnews">
-                                            <img src="Img/Produto 6.png">
-                                        </div>
-                                        <div class="contant-news">
-                                            <div class="cadrnews">
-                                                <img src="Img/Produto 7.png">
-                                            </div>
-                                            <div class="contant-news">
-                                                <div class="cadrnews">
-                                                    <img src="Img/Produto 8.png">
-                                                </div>
-                                                <div class="contant-news">
-                                                    <div class="cadrnews">
-                                                        <img src="Img/Produto 9.png">
-                                                    </div>
-                                                    <div class="contant-news">
-                                                        <div class="cadrnews">
-                                                            <img src="Img/Produto 10.png">
-                                                        </div>
-                                                        <div class="contant-news">
-                                                            <div class="cadrnews">
-                                                                <img src="Img/Produto 11.png">
-                                                            </div>
-                                                            <div class="contant-news">
-                                                                <div class="cadrnews">
-                                                                    <img src="Img/Produto 12.png">
-                                                                </div>
-                                                                <div class="contant-news">
-                                                                    <div class="cadrnews">
-                                                                        <img src="Img/Produto 13.png">
-                                                                    </div>
-                                                                    <div class="contant-news">
-                                                                        <div class="cadrnews">
-                                                                            <img src="Img/Produto 14.png">
-                                                                        </div>
-                                                                        <div class="contant-news">
-                                                                            <div class="cadrnews">
-                                                                                <img src="Img/Produto 15.png">
-                                                                            </div>
-                                                                            <div class="contant-news">
-                                                                                <div class="cadrnews">
-                                                                                    <img src="Img/Produto 16.png">
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-            </div>
-        </div>
+       <div class="container">
+           <div class="bloco-destaque">
+              <h2>Destaque</h2>
+              <div class="content-news">
+                  <div class="produtos">
+                      <img src="Img/Produto 1.png" alt="Jogo God of War">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 2.png" alt="Jogo PSE 2021">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 3.png" alt="Jogo Fida 2022">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 4.png" alt="Jogo Nabunagasr">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 5.png" alt="Kit teclado, Mouse e Fone">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 6.png" alt="Acessorio">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 7.png" alt="Cadeira de jogo">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 8.png" alt="Suporte para celular">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 9.png" alt="Jogo Assassinos Cred Valhalla">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 10.png" alt="Jogo Assassinos Cred III">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 11.png" alt="Jogo Witcher">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 12.png" alt="Jogo Velozes e Furiosos Encruzilhada">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 13.png" alt="Jogo Star Wars Force">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 14.png" alt="Jogo Star Wars Skywalker">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 15.png" alt="Star Wars III">                      
+                  </div>
+                  <div class="produtos">
+                    <img src="Img/Produto 16.png" alt="Star Wars Old Republic">                      
+                  </div>
+              </div>
+           </div>
+       </div> 
     </section>
     <footer>
-        <div class="rodape">
-            <div class="links-foot">
+        <div class="rodape container">
+            <div class="links-footer">
                 <div class="links">
                     <h2>Institucional</h2>
                     <ul>
-                        <li><a href="">Quem Somos</a></li>
-                        <li><a href="">Política de Trocas e Devoluções</a></li>
-                        <li><a href="">Política de Privacidade</a></li>
-                        <li><a href="">Política de Entregas e Envios</a></li>
+                        <li><a href="#">Quem Somos</a></li>
+                        <li><a href="#">Política de Trocas e Devoluções</a></li>
+                        <li><a href="#">Política de Privacidade</a></li>
+                        <li><a href="#">Política de Entregas e Envios</a></li>                     
                     </ul>
                 </div>
-                <div class="Texto">
+                <div class="links">
                     <h2>Atendimento</h2>
                     <ul>
                         <li>Segunda á Sexta das 9hs ás 18hs</a></li>
-                        <li>Aos Sábados das 9hs ás 13hs</a></li>
+                        <li>Aos Sábados das 9hs ás 13hs</a></li>  
                     </ul>
                 </div>
-                <div class="sociais">
-                    <h2>Faça parte do nosso clan, assine nossa newsletter!</h2>
+                <div class="newsletter">
+                    <h2>Faça parte do nosso clube, assine nossa newsletter!</h2>
                     <form action="">
-                        <input type="email" placeholder="E-mail">
-                        <button>Cadastrar</button>
+                        <input id="campo-email" type="email" placeholder="E-mail" required>
+                        <button onclick="enviarEmail">Cadastrar</button>
                     </form>
-                    <div class="siga-nos">
-                        <h2>Siga-nos em:</h2>
-                        <a href=""><img src="Img/logo-instagram-png-fundo-transparente 1.png"/a> <a href=""><img
-                                src="Img/logo-facebook-png8 1.png"/a> </div> </div> </div> </div> </footer> <script
-                                src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                                crossorigin="anonymous"></script>
-                            </body>
+                    <div class="redes sociais"
+                    <h2>Siga-nós em:</h2>
+                    <a href=""><img src="Img/logo-facebook-png8 1.png" alt=""></a>
+                    <a href=""><img src="Img/logo-instagram-png-fundo-transparente 1.png"</a>
+                </div>
+            </div>
+        </div>
+    </footer>  
+    <script>
+        let menu = document.getElementById("menu")
+
+        function mostrarMenu() {
+            if (menu.style.display != "Flex") {
+                menu.style.display = "Flex"
+            } else{
+                menu.style.display = "nome"
+            }
+        }
+    </script>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+         crossorigin="anonymous"></script>
+</body>
 
 </html>
