--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head> 
 
-<body onload="mostrarPopup()">
+<body >
     <header>
         <div class="container-grid">
             <div class="container logo">
@@ -41,8 +41,8 @@
 </header>
     <div class="bannerfull ">
     </div>
-    <section class="banners-tarja container">
-        <div class="banners-tarja">
+    <section class="banners-tarja">
+        <div class="banners-tarja container">
             <img src="Img/Banner-TarjaParcelamento.png"></a>
             <img src="Img/Banner-TarjaEntregas.png"></a>
             <img src="Img/Banner-Tarja-Desconto.png"></a>
@@ -108,7 +108,7 @@
                   </div>
                   <div class="produtos">
                     <img src="Img/Produto 16.png" alt="Star Wars Old Republic">                      
-                  </div>
+                </div>
               </div>
            </div>
        </div> 
