--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <div class="container-grid">
+        <div class="container-grid posicionamento-header">
             <div class="container logo">
-                <a href=""><img src="Img/Logo.png" alt="Logo do site"></a>
+                <a href=""><img class="logo" src="Img/Logo.png" alt="Logo do site"></a>
             </div>
             <div class="container busca">
                 <a href=""><img src="Img/Pesquisa.png" alt="Pesquisa"></a>
@@ -32,12 +32,13 @@
         </div>
 
         <div>
-            <nav class="menu">
+            <nav id="hamburguer" class="menu">
                 <a href="">Acessórios</a>
                 <a href="">Star Wars</a>
                 <a href="">Playstation</a>
                 <a href="">XBox</a>
             </nav>
+            <a href="" onclick="monstrarHamburguer()"><img class="hamburguer" src="img/menu-hamburguer.png"</a>
         </div>
     </header>
     <div class="bannerfull">
@@ -159,22 +160,28 @@
                     </form>
                     <div class="redes sociais" <h2>Siga-nós em:</h2>
                         <a href=""><img src="Img/logo-facebook-png8 1.png" alt=""></a>
-                        <a href=""><img src="Img/logo-instagram-png-fundo-transparente 1.png" </a> </div> </div> </div>
-                                </footer> <script>
-                            let menu = document.getElementById("menu")
+                        <a href=""><img src="Img/logo-instagram-png-fundo-transparente 1.png" </a> 
+                </div> 
+            </div> 
+        </div>
+     </footer> 
+     <script>
+         let hamburguer = document.getElementById("hamburguer");
 
-                            function mostrarMenu() {
-                            if (menu.style.display != "Flex") {
-                            menu.style.display = "Flex"
-                            } else{
-                            menu.style.display = "nome"
-                            }
-                            }
-                            </script>
-                            <script src="js/script.js"></script>
-                            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+         function mosntrarhamburguer(){
+             if(hamburguer.style.display != "flex"){
+                 hamburguer.style.display = "flex"
+             }else{
+                 hamburguer.style.display = "none"
+             }
+         }
+     </script>
+    
+        <script src="js/script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                                 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                                crossorigin="anonymous"></script>
+                                crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
