--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body onload="renderizarProdutos()">
     <header>
         <div class="container-grid posicionamento-header">
             <div class="container logo">
@@ -38,11 +38,17 @@
                 <a href="">Playstation</a>
                 <a href="">XBox</a>
             </nav>
-            <a href="" onclick="monstrarHamburguer()"><img class="hamburguer" src="img/menu-hamburguer.png"</a>
+            <a href="#" id="hamburguer"><img class="hamburguer" src="img/menu-hamburguer.png"</a>
         </div>
     </header>
-    <div class="bannerfull">
+    <div id="carrosel" class="carrosel">
+        <img src="Img/Banner Rotativo.png">
+        <img src="Img/Banner Rota.2.jpeg">
+        <img src="Img/Banner Rota.3.jpeg">
+        <img src="Img/Banner Rota.4.jpeg">
     </div>
+   <!--  <div class="bannerfull">
+    </div>-->
     <section class="banners-tarja">
             <div class="bannerstarja container">
                <div class="row">
@@ -74,65 +80,111 @@
                 </div>          
             </div>        
     </section>
-
     <section class="secao-destaque">
         <div class="produtos-em-destaque container">
             <div class="bloco-destaque">
                 <h2>Destaque</h2>
                 <div class="row">
                     <div class="produto1 col-md-3">
-                        <img src="Img/Produto 1.png" alt="Jogo God of War">                    
+                        <img src="Img/Produto 1.png" alt="Jogo God of War"> 
+                        <h3>God of War</h3>
+                        <p>R$10,00</p>  
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto2 col-md-3">
                         <img src="Img/Produto 2.png" alt="Jogo PSE 2021">
+                        <h3>PSE 2021</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto3 col-md-3">
                         <img src="Img/Produto 3.png" alt="Jogo Fida 2022">
+                        <h3>Fida 2022</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto4 col-md-3">
                         <img src="Img/Produto 4.png" alt="Jogo Nabunagasr">
+                        <h3>Nabunagasr</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto5 col-md-3">
-                        <img src="Img/Produto 5.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 5.png" alt="Kit teclado">
+                        <h3>Kit teclado</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto6 col-md-3">
-                        <img src="Img/Produto 6.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 6.png" alt="Acessorios">
+                        <h3>Acessorios</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto7 col-md-3">
-                        <img src="Img/Produto 7.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 7.png" alt="Cadeira">
+                        <h3>Cadeira</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto8 col-md-3">
-                        <img src="Img/Produto 8.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 8.png" alt="Suporte para celular">
+                        <h3>Suporte para celular</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto9 col-md-3">
-                        <img src="Img/Produto 9.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 9.png" alt="Assasinos Creed Valhalla">
+                        <h3>Assasinos Creed Valhalla</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto10 col-md-3">
-                        <img src="Img/Produto 10.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 10.png" alt="Assasinos Creed III">
+                        <h3>Assasinos Creed III</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto11 col-md-3">
-                        <img src="Img/Produto 11.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 11.png" alt="The Witcher">
+                        <h3>The Witcher</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto12 col-md-3">
-                        <img src="Img/Produto 12.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 12.png" alt="Velozes e Furiosos Encruzilhada">
+                        <h3>Velozes e Furiosos Encruzilhada</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto13 col-md-3">
-                        <img src="Img/Produto 13.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 13.png" alt="The Force Unleashed">
+                        <h3>The Force Unleashed</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto14 col-md-3">
-                        <img src="Img/Produto 14.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 14.png" alt="The Sky Walker Saga">
+                        <h3>The Sky Walker Saga</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto15 col-md-3">
-                        <img src="Img/Produto 15.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 15.png" alt="Star Wars III">
+                        <h3>Star Wars III</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                     <div class="produto16 col-md-3">
-                        <img src="Img/Produto 16.png" alt="Jogo Nabunagasr">
+                        <img src="Img/Produto 16.png" alt="Old Republic">
+                        <h3>Old Republic</h3>
+                        <p>R$10,00</p>
+                        <a href="">Comprar</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    
+    </section>    
     <footer>
         <div class="rodape container">
             <div class="links-footer">
@@ -155,17 +207,19 @@
                 <div class="newsletter">
                     <h2>Faça parte do nosso clube, assine nossa newsletter!</h2>
                     <form action="">
-                        <input id="campo-email" type="email" placeholder="E-mail" required>
+                        <input id="campo-email" type="email" placeholder="E-mail" required> 
                         <button onclick="enviarEmail">Cadastrar</button>
                     </form>
-                    <div class="redes sociais" <h2>Siga-nós em:</h2>
-                        <a href=""><img src="Img/logo-facebook-png8 1.png" alt=""></a>
-                        <a href=""><img src="Img/logo-instagram-png-fundo-transparente 1.png" </a> 
+                    <div class="redes-sociais">
+                     <h2>Siga-nós em:</h2>
+                     <a href=""><img src="Img/facebook.png" </a>
+                     <a href=""><img src="Img/instagram.png" </a>
+                     <a href=""><img src="Img/whatsapp.png" </a> 
                 </div> 
             </div> 
         </div>
      </footer> 
-     <script>
+     <!-- <script>
          let hamburguer = document.getElementById("hamburguer");
 
          function mosntrarhamburguer(){
@@ -175,13 +229,12 @@
                  hamburguer.style.display = "none"
              }
          }
-     </script>
-    
-        <script src="js/script.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                                crossorigin="anonymous">
-    </script>
+     </script> -->
+     <script src="js/jquery-3.6.0.js"></script>   
+     <script src="js/script.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
