--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body onload="renderizarProdutos()">
+<body >
     <header>
         <div class="container-grid posicionamento-header">
             <div class="container logo">
                 <a href=""><img class="logo" src="Img/Logo.png" alt="Logo do site"></a>
             </div>
             <div class="container busca">
-                <a href=""><img src="Img/Pesquisa.png" alt="Pesquisa"></a>
+                <a href="" id="busca"><img src="Img/Pesquisa.png" alt="Pesquisa"></a>
             </div>
             <div class="container conta">
                 <a href=""><img src="Img/Minha Conta.png" alt="Minha Conta"></a>
@@ -32,7 +32,7 @@
         </div>
 
         <div>
-            <nav id="hamburguer" class="menu">
+            <nav id="menu" class="menu">
                 <a href="">Acessórios</a>
                 <a href="">Star Wars</a>
                 <a href="">Playstation</a>
@@ -84,8 +84,8 @@
         <div class="produtos-em-destaque container">
             <div class="bloco-destaque">
                 <h2>Destaque</h2>
-                <div class="row">
-                    <div class="produto1 col-md-3">
+                <div id="espaco-produtos" class="row">
+                    <!-- <div class="produto1 col-md-3">
                         <img src="Img/Produto 1.png" alt="Jogo God of War"> 
                         <h3>God of War</h3>
                         <p>R$10,00</p>  
@@ -180,7 +180,7 @@
                         <h3>Old Republic</h3>
                         <p>R$10,00</p>
                         <a href="">Comprar</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -230,8 +230,9 @@
              }
          }
      </script> -->
-     <script src="js/jquery-3.6.0.js"></script>   
-     <script src="js/script.js"></script>
+     
+    <script src="js/jquery-3.6.0.min.js"></script>   
+    <script src="js/script.js"></script>  
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
