--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -40,6 +40,7 @@
             </nav>
             <a href="#" id="hamburguer"><img class="hamburguer" src="img/menu-hamburguer.png"</a>
         </div>
+
     </header>
     <div id="carrosel" class="carrosel">
         <img src="Img/Banner Rotativo.png">
@@ -85,7 +86,7 @@
             <div class="bloco-destaque">
                 <h2>Destaque</h2>
                 <div id="espaco-produtos" class="row">
-                    <!-- <div class="produto1 col-md-3">
+                    <!-- <div class="produto col-md-3">
                         <img src="Img/Produto 1.png" alt="Jogo God of War"> 
                         <h3>God of War</h3>
                         <p>R$10,00</p>  
