--- a/SA2 - Game Mania/index.html
+++ b/SA2 - Game Mania/index.html
@@ -85,8 +85,8 @@
         <div class="produtos-em-destaque container">
             <div class="bloco-destaque">
                 <h2>Destaque</h2>
-                <div id="espaco-produtos" class="row">
-                    <!-- <div class="produto col-md-3">
+                <div id=" espaco-destaque " class="row">
+                    <div class="produto1 col-md-3">
                         <img src="Img/Produto 1.png" alt="Jogo God of War"> 
                         <h3>God of War</h3>
                         <p>R$10,00</p>  
@@ -181,13 +181,13 @@
                         <h3>Old Republic</h3>
                         <p>R$10,00</p>
                         <a href="">Comprar</a>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
     </section>    
     <footer>
-        <div class="rodape container">
+        <div class="rodape">
             <div class="links-footer">
                 <div class="links">
                     <h2>Institucional</h2>
