--- a/SA2 - Game Mania/login.html
+++ b/SA2 - Game Mania/login.html
@@ -17,7 +17,7 @@
                 <a href=""><img class="logo" src="Img/Logo.png" alt="Logo do site"></a>
             </div>
             <div class="container busca">
-                <a href="" id="busca"><img src="Img/Pesquisa.png" alt="Pesquisa"></a>
+                <a href=""><img src="Img/Pesquisa.png" alt="Pesquisa"></a>
             </div>
             <div class="container conta">
                 <a href=""><img src="Img/Minha Conta.png" alt="Minha Conta"></a>
